--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Quảng cáo bcs</title>
+        <title>Quảng cáo </title>
         <link rel="stylesheet" href="./assets/css/styles.css">
     </head>
     <body>
         <div>
             <p>hahah</p>
+            <p>Clip hay đó</p>
         </div>
     </body>
 </html>
